--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -533,25 +533,24 @@ Github: prajwalmw
             app:cardUseCompatPadding="true"
             app:cardPreventCornerOverlap="false"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/padding_card"
-            android:layout_marginBottom="26dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             app:cardCornerRadius="10sp"
             >
 
             <RelativeLayout
                 android:id="@+id/help_relative"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:padding="20dp">
 
                 <TextView
                     android:id="@+id/help_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Help"
-                    android:paddingVertical="12dp"
                     android:background="@color/white"
                     android:textColor="@color/txt_sub_header_color"
-                    android:paddingStart="20dp"
                     android:textSize="16sp"
                     android:fontFamily="@font/lato_bold"/>
 
@@ -563,11 +562,10 @@ Github: prajwalmw
                     android:textStyle="bold"
                     android:fontFamily="@font/lato_regular"
                     android:text="@string/if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394"
-                    android:paddingTop="@dimen/padding_card"
                     android:layout_below="@id/help_title"
                     android:textSize="14sp"
                     android:textColor="@color/txt_sub_header_color"
-                    android:padding="@dimen/padding_card"
+                    android:layout_marginTop="10dp"
                     />
 
                 <Button
@@ -575,17 +573,15 @@ Github: prajwalmw
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/visit_help_text"
-                   android:text="+91 9825989750"
-                    android:paddingStart="20sp"
+                    android:text="+91 9825989750"
                     android:textSize="@dimen/text_18sp"
-                    android:layout_marginBottom="15sp"
+                    android:layout_marginStart="10sp"
                     android:fontFamily="@font/lato_medium" android:textColor="@color/txt_sub_header_color"
                     android:textStyle="bold"
-                    android:paddingHorizontal="20sp"
                     android:background="@android:color/transparent"
                     android:drawableStart="@drawable/ic_icons8_whatsapp"
                     android:gravity="start|center"
-                    android:layout_marginStart="10sp"
+                    android:layout_marginTop="10dp"
                     android:drawablePadding="10sp" />
 
                 <!-- Icon Credits:- <a target="_blank" href="https://icons8.com/icons/set/whatsapp">WhatsApp icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
@@ -596,35 +592,23 @@ Github: prajwalmw
 
 
         <android.support.v7.widget.CardView
-        android:id="@+id/mental_help_cardview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="40dp"
-        app:cardUseCompatPadding="true"
-        app:cardPreventCornerOverlap="false"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/padding_card"
-        android:layout_marginBottom="26dp"
-        app:cardCornerRadius="10sp"
+            android:id="@+id/mental_help_cardview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="40dp"
+            app:cardUseCompatPadding="true"
+            app:cardPreventCornerOverlap="false"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="10sp"
         >
 
         <RelativeLayout
             android:id="@+id/mental_help_relative"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/mental_help_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Help"
-                android:paddingVertical="12dp"
-                android:background="@color/white"
-                android:textColor="@color/txt_sub_header_color"
-                android:paddingStart="20dp"
-                android:textSize="16sp"
-                android:fontFamily="@font/lato_bold"/>
-
+            android:layout_height="wrap_content"
+            android:padding="20dp">
 
             <TextView
                 android:id="@+id/mental_visit_help_text"
@@ -632,31 +616,25 @@ Github: prajwalmw
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:fontFamily="@font/lato_regular"
-                android:text="@string/if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394"
-                android:paddingTop="@dimen/padding_card"
-                android:layout_below="@id/mental_help_title"
+                android:text="@string/feeling_stressed_or_anxious_request_for_a_free_confidential_mental_health_consultation_with_a_counsellor"
                 android:textSize="14sp"
                 android:textColor="@color/txt_sub_header_color"
-                android:padding="@dimen/padding_card"
+                android:layout_marginTop="10dp"
                 />
 
             <Button
-                android:id="@+id/mental_Help_Watsapp"
+                android:id="@+id/tv_mental_help_request"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/mental_visit_help_text"
-                android:text="+91 9825989750"
-                android:paddingStart="20sp"
-                android:textSize="@dimen/text_18sp"
-                android:layout_marginBottom="15sp"
-                android:fontFamily="@font/lato_medium" android:textColor="@color/txt_sub_header_color"
-                android:textStyle="bold"
-                android:paddingHorizontal="20sp"
-                android:background="@android:color/transparent"
-                android:drawableStart="@drawable/ic_icons8_whatsapp"
-                android:gravity="start|center"
                 android:layout_marginStart="10sp"
-                android:drawablePadding="10sp" />
+                android:layout_marginTop="10dp"
+                android:background="@android:color/transparent"
+                android:fontFamily="@font/lato_bold"
+                android:gravity="start|center"
+                android:hint=""
+                android:text="@string/teleconsult_request"
+                android:textColor="@color/txt_sub_header_color" />
 
             <!-- Icon Credits:- <a target="_blank" href="https://icons8.com/icons/set/whatsapp">WhatsApp icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
 
