--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -80,17 +80,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingHorizontal="10dp"
-                    android:paddingBottom="10dp"
                     android:elevation="40dp"
+                    android:orientation="vertical"
                     android:background="@drawable/white_rectangular_bg">
 
                     <LinearLayout
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="15dp"
-                        android:layout_marginBottom="15dp"
-                        android:layout_weight="1"
-
                         android:orientation="vertical">
 
                         <com.google.android.material.textfield.TextInputLayout
@@ -111,7 +108,7 @@
                                 android:maxLength="25"
                                 android:maxLines="1"
                                 android:singleLine="true"
-                                android:textAppearance="@style/sign_up_input"/>
+                                android:textAppearance="@style/sign_up_input" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -133,7 +130,7 @@
                                 android:maxLines="1"
                                 android:singleLine="true"
                                 android:tag="@string/tag_optional"
-                                android:textAppearance="@style/sign_up_input"/>
+                                android:textAppearance="@style/sign_up_input" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -154,13 +151,12 @@
                                 android:maxLength="25"
                                 android:maxLines="1"
                                 android:singleLine="true"
-                                android:textAppearance="@style/sign_up_input"/>
+                                android:textAppearance="@style/sign_up_input" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
 
-
-                       <!-- <Space
+                        <!-- <Space
                             android:layout_width="20dp"
                             android:layout_height="20dp" />-->
 
@@ -168,8 +164,8 @@
                             android:id="@+id/radioGrp"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
                             android:layout_marginTop="10dp"
+                            android:orientation="horizontal"
                             android:paddingLeft="8dp"
                             android:paddingRight="8dp">
 
@@ -193,7 +189,7 @@
                                 android:drawableLeft="@drawable/icon_female"
                                 android:drawablePadding="5dp"
                                 android:text="@string/identification_screen_checkbox_female"
-                                android:textAppearance="@style/sign_up_gender"/>
+                                android:textAppearance="@style/sign_up_gender" />
 
                         </RadioGroup>
 
@@ -218,7 +214,7 @@
                                 android:inputType=""
                                 android:maxLines="1"
                                 android:singleLine="true"
-                                android:textAppearance="@style/sign_up_input"/>
+                                android:textAppearance="@style/sign_up_input" />
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <!--    <android.support.design.widget.TextInputLayout
@@ -279,11 +275,12 @@
                                     android:maxLines="1"
                                     android:singleLine="true"
                                     android:tag="@string/tag_optional"
-                                    android:textAppearance="@style/sign_up_input"/>
+                                    android:textAppearance="@style/sign_up_input" />
 
                             </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
 
+                        <!--
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -399,11 +396,120 @@
 
                             </com.google.android.material.textfield.TextInputLayout>
                         </LinearLayout>
+-->
 
 
                     </LinearLayout>
 
-                    <ImageView
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="15dp"
+                        android:orientation="vertical">
+
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <!-- android:textColor="#50000000"-->
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/email"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
+                                    android:hint="@string/username"
+                                    android:imeOptions="actionNext"
+                                    android:inputType="text"
+                                    android:maxLength="8"
+                                    android:maxLines="1"
+                                    android:nextFocusForward="@id/password"
+                                    android:textAppearance="@style/sign_up_input" />
+                                <!-- android:maxLines="1"
+                                 android:nextFocusForward="@id/password" />-->
+
+                            </com.google.android.material.textfield.TextInputLayout>
+
+
+                            <ImageView
+                                android:id="@+id/image_username_valid"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_gravity="center_vertical|right"
+                                android:layout_marginTop="0dp"
+                                android:layout_marginEnd="12dp"
+                                app:srcCompat="@drawable/svg_valid_icon">
+
+                            </ImageView>
+                        </FrameLayout>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:lineSpacingExtra="2sp"
+                            android:text="@string/username_condition"
+                            android:textAppearance="@style/login_details_conditions"
+                            android:textColor="@null"
+                            android:translationY="-1sp"
+                            android:visibility="visible" />
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:passwordToggleEnabled="true">
+
+                            <EditText
+                                android:id="@+id/password"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/prompt_password"
+                                android:imeOptions="actionNext"
+                                android:inputType="textPassword"
+                                android:maxLength="12"
+                                android:singleLine="true"
+                                android:textAppearance="@style/sign_up_input" />
+                            android:maxLines="1"
+                            android:singleLine="true" />
+
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:passwordToggleEnabled="true">
+
+                            <EditText
+                                android:id="@+id/cpassword"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/confirm_password"
+                                android:imeOptions="actionNext"
+                                android:inputType="textPassword"
+                                android:maxLength="12"
+                                android:singleLine="true"
+                                android:textAppearance="@style/sign_up_input" />
+                            android:maxLines="1"
+                            android:singleLine="true" />
+
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:lineSpacingExtra="2sp"
+                            android:text="@string/password_should_be_8_characters_long_and_should_have_both_upper_and_lower_case_characters_at_least_one_digit"
+                            android:textAppearance="@style/login_details_conditions"
+                            android:textColor="@null"
+                            android:translationY="-1sp" />
+                    </LinearLayout>
+
+                    <!--<ImageView
                         android:id="@+id/imageview_id_picture"
                         android:layout_width="170dp"
                         android:layout_height="170dp"
@@ -411,11 +517,11 @@
                         android:contentDescription="TODO"
                         android:scaleType="centerCrop"
                         android:visibility="gone"
-                        app:srcCompat="@drawable/ic_person_camera_intele" />
+                        app:srcCompat="@drawable/ic_person_camera_intele" />-->
 
                 </LinearLayout>
 
-                <Space
+           <!--     <Space
                     android:layout_width="20dp"
                     android:layout_height="20dp" />
 
@@ -432,128 +538,8 @@
                     android:textAppearance="@style/sign_up_title" />/>
                 <Space
                     android:layout_width="20dp"
-                    android:layout_height="20dp" />
+                    android:layout_height="20dp" />-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="10dp"
-                    android:background="@drawable/white_rectangular_bg"
-                    android:elevation="40dp">
-
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginBottom="15dp"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <FrameLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <com.google.android.material.textfield.TextInputLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
-
-                                <!-- android:textColor="#50000000"-->
-                                <com.google.android.material.textfield.TextInputEditText
-                                    android:id="@+id/email"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:hint="@string/username"
-                                    android:imeOptions="actionNext"
-                                    android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
-                                    android:inputType="text"
-                                    android:maxLines="1"
-                                    android:maxLength="8"
-                                    android:nextFocusForward="@id/password"
-                                    android:textAppearance="@style/sign_up_input"/>
-                                <!-- android:maxLines="1"
-                                 android:nextFocusForward="@id/password" />-->
-
-                            </com.google.android.material.textfield.TextInputLayout>
-
-
-                            <ImageView
-                                android:id="@+id/image_username_valid"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:layout_marginEnd="12dp"
-                                android:layout_marginTop="0dp"
-                                android:layout_gravity="center_vertical|right"
-                                app:srcCompat = "@drawable/svg_valid_icon">
-
-                            </ImageView>
-                        </FrameLayout>
-
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:text="@string/username_condition"
-                    android:textColor="@null"
-                    android:textAppearance="@style/login_details_conditions"
-                    android:lineSpacingExtra="2sp"
-                    android:visibility="visible"
-                    android:translationY="-1sp"/>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:passwordToggleEnabled="true"
-                    >
-
-                    <EditText
-                        android:id="@+id/password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/prompt_password"
-                        android:imeOptions="actionNext"
-                        android:inputType="textPassword"
-                        android:maxLength="12"
-                        android:singleLine="true"
-                        android:textAppearance="@style/sign_up_input"/>
-                        android:maxLines="1"
-                        android:singleLine="true" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:passwordToggleEnabled="true">
-
-                    <EditText
-                        android:id="@+id/cpassword"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/confirm_password"
-                        android:imeOptions="actionNext"
-                        android:inputType="textPassword"
-                        android:maxLength="12"
-                        android:singleLine="true"
-                        android:textAppearance="@style/sign_up_input"/>
-                        android:maxLines="1"
-                        android:singleLine="true" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:textColor="@null"
-                    android:text="@string/password_should_be_8_characters_long_and_should_have_both_upper_and_lower_case_characters_at_least_one_digit"
-                    android:textAppearance="@style/login_details_conditions"
-                    android:lineSpacingExtra="2sp"
-                    android:translationY="-1sp"/>
-            </LinearLayout>
-            </LinearLayout>
                 <Space
                     android:layout_width="20dp"
                     android:layout_height="20dp" />
